--- a/photolibrary/src/main/res/layout/l_pp_popwindow_photo_folder.xml
+++ b/photolibrary/src/main/res/layout/l_pp_popwindow_photo_folder.xml
@@ -8,7 +8,7 @@
     android:paddingRight="16dp"
     android:paddingBottom="150dp">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/folderRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
